brat/test/golden/error/pass.brat
-- `..` can't be used in the left of a juxtaposition because it consumes all
-- remaining wires. There's nothing left after `..` for the next thing to
-- check against
f(Nat, Bool) -> Nat, Bool
f = { .., (x => x) }
